--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,10 @@
     $(document).ready(function(){
       $('.sidenav').sidenav();
     });
+
+    $(document).ready(function(){
+      $('.parallax').parallax();
+    });
   </script>
   </body>
 </html>
