agrega reparaciones y participaciones

--- a/public/index.html
+++ b/public/index.html
@@ -64,11 +64,19 @@
   <script>
     $(document).ready(function(){
       $('.sidenav').sidenav();
+      $('.sidenav-trigger').sidenav();
+      $('.show-on-large').sidenav();
+
+
     });
+
+
 
     $(document).ready(function(){
       $('.parallax').parallax();
     });
+
+
   </script>
   </body>
 </html>
