--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,8 @@
         $('.carousel').carousel();
     });
     $('.carousel.carousel-slider').carousel({
-        fullWidth: true
-
+        fullWidth: true,
+        indicators: true
     });
 
 
