--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Page navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" data-spy="affix" data-offset-top="0">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="assets/imgs/logo.svg" alt=""></a>
+            <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -63,7 +63,7 @@
 
                 <div class="buttons pt-3">
                     <button class="btn btn-primary rounded">Sigueme</button>
-                    <button class="btn btn-dark rounded">Descargar CV</button>
+                    <a href="./cv-forntend-developer-carlos-gomez.pdf" class="btn btn-dark rounded" download="cv-forntend-developer-carlos-gomez">Descargar CV</a>
                 </div>     
                 <div class="socials mt-4">
                     <a class="social-item" href="https://www.facebook.com/carlosmario.gomezgelvez/"><i class="ti-facebook"></i></a>
@@ -110,7 +110,7 @@
                     <p class="subtitle">Frontend Developer | UI/UX</p>
                     <p>Me gusta diseñar, codificar sitios web y  aplicaciones, ser el responsable de definir un bosquejo que resulte atractiva al usuario con un alto nivel de pro actividad y etica profesional.</p>
                     <p>Soy muy creativo y curioso, tambien me gusta mucho el freestyle rap, el jiu jitsu y el BMX</p>
-                    <button class="btn btn-primary rounded mt-3">Descargar CV</button>                   
+                    <a class="btn btn-primary rounded mt-3" href="./cv-forntend-developer-carlos-gomez.pdf" download="cv-forntend-developer-carlos-gomez">Descargar CV</a>                   
                 </div>
             </div>
         </div>
