--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
         <div class="container text-center">
             <h6 class="subtitle">Testmonios</h6>
             <h6 class="section-title mb-4">Que se dice de mí</h6>
-            <p class="mb-5 pb-4">Personas con las que eh compartido <br> a nivel profesional y personal.</p>
+            <p class="mb-5 pb-4">Personas con las que he compartido <br> a nivel profesional y personal.</p>
 
 
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
