add new cv and add calendly

--- a/index.html
+++ b/index.html
@@ -655,6 +655,14 @@
                     </form>
                 </div>
                 <div class="contact-infos">
+
+                    <div class="item">
+                        <i class="ti-email"></i>
+                        <div class="">
+                            <h5>Agendemos una reunion</h5>
+                            <a href="https://calendly.com/gelvezz23/30min">Agendar</a>
+                        </div>
+                    </div>
                     <div class="item">
                         <i class="ti-location-pin"></i>
                         <div class="">
@@ -676,6 +684,7 @@
                             <p>mao_23_@hotmail.com</p>
                         </div>
                     </div>
+                    
                 </div>                  
             </div>
         </div>  
