--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                     <div class="item">
                         <i class="ti-email"></i>
                         <div class="">
-                            <h5>Agendemos una reunion</h5>
+                            <h5>Agendemos una reunión</h5>
                             <a href="https://calendly.com/gelvezz23/30min">Agendar</a>
                         </div>
                     </div>
