--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                         <i class="ti-location-pin"></i>
                         <div class="">
                             <h5>Dirección</h5>
-                            <p> crr 17 # 95 - 10 - Colombia, Bogota</p>
+                            <p>Colombia, Bogota</p>
                         </div>                          
                     </div>
                     <div class="item">
