fix: actualizacion de cv

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Steller main styles -->
 	<link rel="stylesheet" href="assets/css/steller.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5902747634849912"
+     crossorigin="anonymous"></script>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
@@ -679,7 +681,18 @@
         </div>
     </section>      
     <!-- End od Hire me section. -->
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5902747634849912"
+    crossorigin="anonymous"></script>
+<!-- carlos mario gomez gelvez -->
+<ins class="adsbygoogle"
+    style="display:block"
+    data-ad-client="ca-pub-5902747634849912"
+    data-ad-slot="7961532583"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Contact Section -->
     <section id="contact" class="position-relative section">
         <div class="container text-center">
