fix: actualizacion de cv

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 	<link rel="stylesheet" href="assets/css/steller.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5902747634849912"
      crossorigin="anonymous"></script>
+     <style>
+        .eapps-widget-toolbar{
+            display: none !important;
+        }
+     
+        div.yottie-container a[href="https://elfsight.com/youtube-channel-plugin-yottie/?utm_source=websites&amp;utm_medium=clients&amp;utm_content=yottie&amp;utm_term=%25website_domain%25&amp;utm_campaign=free-widget"]{
+            display: none !important;
+        }
+        div.yottie-container a[href="https://elfsight.com/youtube-channel-plugin-yottie/?utm_source=websites&amp;utm_medium=clients&amp;utm_content=yottie&amp;utm_term=%25website_domain%25&amp;utm_campaign=free-widget"]::after{
+            display: none !important;
+        }
+        div.yottie-container a[href="https://elfsight.com/youtube-channel-plugin-yottie/?utm_source=websites&amp;utm_medium=clients&amp;utm_content=yottie&amp;utm_term=%25website_domain%25&amp;utm_campaign=free-widget"]::before{
+            display: none !important;
+        }
+     </style>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
 
@@ -117,7 +132,13 @@
             </div>
         </div>
     </section>
-
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-a21b7bd9-56c5-4c6b-acf8-34824f20f3b3" data-elfsight-app-lazy></div>
+    <style>
+         div.yottie-container a[href="https://elfsight.com/youtube-channel-plugin-yottie/?utm_source=websites&amp;utm_medium=clients&amp;utm_content=yottie&amp;utm_term=%25website_domain%25&amp;utm_campaign=free-widget"]{
+            display: none !important;
+        }
+    </style>
     <!-- Service section -->
     <section id="service" class="section">
         <div class="container text-center">
