--- a/index.html
+++ b/index.html
@@ -778,7 +778,11 @@
         </div>      
     </section>
     <!-- End of Contact Section -->
-
+    <div class="cookie-banner">
+        <p>Este sitio web utiliza cookies para mejorar tu experiencia. Al continuar navegando, aceptas nuestro uso de cookies.</p>
+        <button   
+       class="accept-cookies">Aceptar</button>
+      </div>
     <!-- Page Footer -->
     <footer class="page-footer">
         <div class="container">
