feat: update cv

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <a class="social-item" href="https://www.linkedin.com/in/carlosmariogomezg/"><i class="ti-linkedin"></i></a>
                     <a class="social-item" href="https://devhome.dev/"><i class="ti-world"></i></a>
                     <a class="social-item" href="https://www.instagram.com/carlosmariogomezgelvez/"><i class="ti-instagram"></i></a>
-                    <a class="social-item" href="https://www.youtube.com/@SEMILLEROSILUXUFPS"><i class="ti-youtube"></i></a>
+                    <a class="social-item" href="https://www.youtube.com/@gelvezz23"><i class="ti-youtube"></i></a>
                 </div>
             </div>              
             <div class="img-holder">
@@ -463,7 +463,7 @@
                             <div class="overlay-infos">
                                 <h5>Google maps</h5>
                                 <p>mapa con puntero dinamico que muestra coordenadas</p>
-                                <a href="http://devman.me/Mapa-con-puntero-movil/"><i class="ti-link"></i></a>
+                                <a href="https://gelvezz23.github.io/Mapa-con-puntero-movil/"><i class="ti-link"></i></a>
                                 
                             </div>  
                         </div>
